--- a/resources/css/sections/profileSection.scss
+++ b/resources/css/sections/profileSection.scss
@@ -1,5 +1,6 @@
 .section {
     &-bg {
+        padding-top: 3rem!important;
         background: #00a082;
     }
     &-title {
@@ -9,6 +10,9 @@
 }
 @media only screen and (max-width: 768px) {
     .section {
+        &-bg {
+            padding-top: 32px !important;
+        }
         &-title {
             font-size: 16px;
             text-align: center;
