--- a/resources/css/home/home.scss
+++ b/resources/css/home/home.scss
@@ -78,8 +78,11 @@
 }
 @media only screen and (max-width: 768px) {
     .home {
+        &-main {
+            margin: 5px;
+        }
         &-category {
-            height: 140px;
+            height: 120px;
             border: 5px solid white;
             &-arrow {
                 & > div {
