--- a/resources/css/sections/profileSection.scss
+++ b/resources/css/sections/profileSection.scss
@@ -2,6 +2,10 @@
     &-bg {
         padding-top: 3rem!important;
         background: #00a082;
+        &-main {
+            padding-top: 3rem!important;
+            background: #00a082;
+        }
     }
     &-title {
         font-family: 'Lobster', cursive;
@@ -12,6 +16,9 @@
     .section {
         &-bg {
             padding-top: 32px !important;
+            &-main {
+                padding-top: 0 !important;
+            }
         }
         &-title {
             font-size: 16px;
