--- a/resources/css/payments/payments.scss
+++ b/resources/css/payments/payments.scss
@@ -1,3 +1,5 @@
+@import '../components/loading.scss';
+@import '../components/loading-btn.scss';
 .payments {
     &-card {
         &-bank {
@@ -11,8 +13,9 @@
         }
     }
     &-title {
-        font-family: 'Lobster', cursive;
-        margin: 30px 0 30px 0;
+        margin: 50px 0 10px 0;
+        font-weight: bold;
+        font-size: 24px;
     }
     &-description {
         font-size: 16px;
@@ -82,6 +85,12 @@
         }
         &-all {
             margin: 10px 0 10px 0;
+        }
+        &-btn {
+            height: 30px;
+            padding: 0 10px 0 10px;
+            font-size: 12px !important;
+            min-width: 120px;
         }
     }
 }
