--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -2,10 +2,14 @@
     &-title {
         margin-top: 40px;
         font-size: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     &-description {
         font-size: 16px;
         margin-top: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     &-tab {
         border:  none !important;
@@ -150,7 +154,6 @@
     position: relative;
     overflow: hidden;
     border-radius: 0 0 20px 20px;
-    box-shadow: 0 0 0 10px #fff;
     & > img {
         width: 100%;
     }
@@ -191,6 +194,6 @@
         }
     }
     .wallpaper {
-        box-shadow: 0 0 0 5px #fff;
+
     }
 }
