--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -223,7 +223,7 @@
             box-shadow: 0 0 0 5px white;
         }
         &-shadow {
-
+            box-shadow: 0 0 3px 0 rgba(0,0,0,.15);
             &-main {
                 box-shadow:0 1px 1px  rgba(0,0,0,.1);
                 border-radius: 0 0 15px 15px;
