--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -181,7 +181,7 @@
         &-card {
             grid-gap: 5px;
             &-main {
-                padding: 5px;
+                padding: 5px 8px 5px 8px;
             }
             &-title {
                 font-size: 12px;
