--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -112,7 +112,7 @@
         }
         &-main {
             box-shadow: 0 3px 3px rgba(0,0,0,.1);
-            border-radius: 0 0 15px 15px;
+            position: relative;
         }
     }
     &-image {
