--- a/resources/css/home/home.scss
+++ b/resources/css/home/home.scss
@@ -1,17 +1,20 @@
 .home {
     &-main {
-        margin-bottom: 20px;
-        margin-top: 20px;
+        padding-bottom: 20px;
+        padding-top: 20px;
     }
     &-bg {
         background: no-repeat center;
         background-size: cover;
+        &-color {
+            background: rgb(245,245,245);
+        }
     }
     &-category {
         height: 230px;
         width: 100%;
         border-radius: 15px;
-        box-shadow: 0 0 5px 1px rgba(0,0,0,.1);
+        box-shadow: 0 0 2px 0 rgba(0,0,0,.1);
         border: 10px solid white;
         position: relative;
         overflow: hidden;
