--- a/resources/css/home/home.scss
+++ b/resources/css/home/home.scss
@@ -82,7 +82,7 @@
 @media only screen and (max-width: 768px) {
     .home {
         &-main {
-            margin: 5px;
+            margin: 0 10px 0 10px;
         }
         &-category {
             height: 120px;
