--- a/resources/css/organization/list.scss
+++ b/resources/css/organization/list.scss
@@ -14,6 +14,7 @@
     &-description {
         font-size: 13px;
         text-align: justify;
+        margin-bottom: 15px !important;
     }
     &-rating {
         position: absolute;
