--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -19,6 +19,10 @@
         font-size: 30px;
         margin-left: 10px;
         margin-right: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
     }
     &-description {
         font-size: 16px;
