--- a/resources/css/favorite/favorite.scss
+++ b/resources/css/favorite/favorite.scss
@@ -14,6 +14,9 @@
             opacity: .3;
         }
     }
+    &-main {
+        margin-left: 10px;
+    }
     &-category {
         position: absolute;
         z-index: 2;
