--- a/resources/css/footerMenu/footerMenu.scss
+++ b/resources/css/footerMenu/footerMenu.scss
@@ -4,7 +4,7 @@
 }
 .footer {
     &-fixed {
-        box-shadow: 0 0 5px 0 rgba(0,0,0,.1);
+        box-shadow: 0 0 5px 1px rgba(0,0,0,.1);
         position: fixed;
         right: 10px;
         bottom: 30px;
