--- a/resources/css/organization/list.scss
+++ b/resources/css/organization/list.scss
@@ -88,6 +88,9 @@
 }
 @media only screen and (max-width: 768px) {
     .item {
+        &-main {
+            max-height: 80px;
+        }
         &-rating {
             padding: 2px 5px 2px 5px;
             line-height: 1;
