--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -1,6 +1,111 @@
 @import '../components/loading.scss';
 @import '../components/loading-btn.scss';
 .organization {
+    &-rating {
+        display: table;
+        margin: 20px auto 0 auto;
+        & > div {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+        }
+        &-count {
+            font-weight: bold;
+            font-size: 17px;
+            line-height: 1;
+            color: #00a082;
+        }
+        &-star {
+            width: 30px;
+            height: 30px;
+            background: url('/img/logo/star-whitesmoke.svg') no-repeat center;
+            background-size: contain;
+            &-sel {
+                background-image: url('/img/logo/star-orange.svg');
+            }
+        }
+    }
+    &-comment {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 60px auto;
+        grid-gap: 15px;
+        &-count {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        &-line {
+            border-bottom: 1px solid rgb(230,230,230);
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+        &-text {
+            font-size: 18px;
+        }
+        &-icon {
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #FF8008;
+            color: #fff;
+            font-weight: bold;
+            border-radius: 100px;
+            & > div {
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+        &-detail {
+            display: grid;
+            align-content: center;
+            grid-gap: 2px;
+            &-status {
+                & > div {
+                    background: #00a082;
+                    display: table;
+                    padding: 2px 10px 2px 10px;
+                    border-radius: 10px;
+                    font-size: 11px;
+                    color: white;
+                    font-weight: bold;
+                    margin-top: 5px;
+                }
+            }
+            &-dot {
+                padding: 0 5px 0 5px;
+            }
+            &-name {
+                font-size: 15px;
+                font-weight: bold;
+                display: grid;
+                grid-template-columns: auto auto auto;
+                width: fit-content;
+                &-user {
+                    overflow: hidden;
+                    display: inline-block;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                }
+            }
+            &-stars {
+                display: flex;
+                gap: 5px;
+            }
+            &-star, &-star-sel {
+                height: 16px;
+                width: 16px;
+                background: url('/img/logo/star-grey.svg') no-repeat center;
+                background-size: contain;
+                opacity: .5;
+            }
+            &-star-sel {
+                background-image: url('/img/logo/star-orange.svg');
+                opacity: 1;
+            }
+        }
+    }
     &-empty {
         &-title {
 
@@ -26,8 +131,8 @@
     &-description {
         font-size: 16px;
         margin-top: 30px;
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
     &-tab {
         padding: 10px 15px 10px 15px !important;
@@ -191,6 +296,73 @@
 }
 @media only screen and (max-width: 768px) {
     .organization {
+        &-rating {
+            margin: 10px auto 0 auto;
+            & > div {
+                gap: 5px;
+            }
+            &-count {
+                font-size: 11px;
+            }
+            &-star {
+                width: 16px;
+                height: 16px;
+            }
+        }
+        &-comment {
+            grid-template-columns: 40px auto;
+            grid-gap: 10px;
+            &-count {
+                font-size: 12px;
+            }
+            &-line {
+                padding: 10px 0 10px 0 !important;
+                gap: 10px;
+            }
+            &-text {
+                font-size: 13px;
+            }
+            &-icon {
+                height: 40px;
+                & > div {
+                    font-size: 14px;
+                }
+            }
+            &-detail {
+                display: grid;
+                align-content: center;
+                grid-gap: 2px;
+                &-status {
+                    & > div {
+                        font-size: 9px;
+                    }
+                }
+                &-dot {
+                    padding: 0 3px 0 3px;
+                }
+                &-name {
+                    font-size: 13px;
+                    &-user {
+
+                    }
+                }
+                &-stars {
+                    display: flex;
+                    gap: 2px;
+                }
+                &-star, &-star-sel {
+                    height: 10px;
+                    width: 10px;
+                    background: url('/img/logo/star-grey.svg') no-repeat center;
+                    background-size: contain;
+                    opacity: .5;
+                }
+                &-star-sel {
+                    background-image: url('/img/logo/star-orange.svg');
+                    opacity: 1;
+                }
+            }
+        }
         &-card {
             grid-gap: 5px;
             &-main {
