--- a/resources/css/profile/history.scss
+++ b/resources/css/profile/history.scss
@@ -51,6 +51,14 @@
             }
         }
     }
+    &-empty {
+        &-title {
+
+        }
+        &-description {
+            font-size: 16px;
+        }
+    }
 }
 @media only screen and (max-width: 768px) {
     .history {
@@ -80,6 +88,14 @@
             padding: 0 10px 0 10px;
             font-size: 12px !important;
             min-width: 120px;
+        }
+        &-empty {
+            &-title {
+                font-size: 16px;
+            }
+            &-description {
+                font-size: 12px;
+            }
         }
         &-empty {
             &-title {
