--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -30,6 +30,7 @@
         align-items: center;
         grid-template-columns: 60px auto;
         grid-gap: 15px;
+        gap: 15px;
         &-count {
             font-size: 18px;
             font-weight: bold;
@@ -61,6 +62,7 @@
             display: grid;
             align-content: center;
             grid-gap: 2px;
+            gap: 2px;
             &-status {
                 & > div {
                     background: #00a082;
@@ -158,6 +160,7 @@
         display: grid;
         grid-template-columns: 40px auto 40px;
         grid-gap: 10px;
+        gap: 10px;
         padding: 5px;
         background: rgb(250,250,250);
         border-radius: 40px;
@@ -182,6 +185,7 @@
         display: grid;
         grid-template-columns: auto 40px 15px;
         grid-gap: 15px;
+        gap: 15px;
         &-limit {
             font-size: 12px;
         }
@@ -311,8 +315,8 @@
         }
         &-comment {
             grid-template-columns: 40px auto;
-            grid-gap: 0;
-            margin-top: 10px;
+            grid-gap: 10px;
+            gap: 10px;
             &-count {
                 font-size: 12px;
             }
@@ -333,6 +337,7 @@
                 display: grid;
                 align-content: center;
                 grid-gap: 2px;
+                gap: 2px;
                 &-status {
                     & > div {
                         font-size: 9px;
@@ -366,6 +371,7 @@
         }
         &-card {
             grid-gap: 5px;
+            gap: 5px;
             &-main {
                 padding: 5px 8px 5px 8px;
             }
