--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -5,7 +5,7 @@
         display: table;
         margin: 20px auto 0 auto;
         & > div {
-            display: inline-flex;
+            display: flex;
             align-items: center;
             gap: 10px;
         }
