--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -309,6 +309,9 @@
             margin: 10px auto 0 auto;
             & > div {
                 gap: 5px;
+                & > div {
+                    margin-left: 5px;
+                }
             }
             &-count {
                 font-size: 11px;
