--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -19,6 +19,7 @@
             font-size: 17px;
             line-height: 1;
             color: #00a082;
+            margin-left: 15px;
         }
         &-star {
             width: 30px;
@@ -315,6 +316,7 @@
             }
             &-count {
                 font-size: 11px;
+                margin-left: 10px;
             }
             &-star {
                 width: 16px;
