--- a/resources/css/sections/profileSection.scss
+++ b/resources/css/sections/profileSection.scss
@@ -1,3 +1,38 @@
+.breadcrumb {
+    background: transparent;
+    margin: 0;
+    padding: 0;
+    color: white;
+    padding-bottom: 5px;
+    & > li {
+        display: flex;
+        align-items: center;
+        padding: 0;
+        margin: 0 2px 0 2px;
+        & > a {
+            padding: 0;
+            color: inherit;
+            text-decoration: none !important;
+        }
+    }
+    &-link {
+        line-height: 1.4;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    &-arrow, &-home {
+        background: url('/img/logo/right-arrow-white.svg') no-repeat center;
+        background-size: contain;
+        width: 20px;
+        height: 20px;
+    }
+    &-arrow {
+        background-size: 50%;
+    }
+    &-home {
+        background-image: url('/img/logo/home-white.svg');
+    }
+}
 .section {
     &-bg {
         padding-top: 3rem!important;
@@ -23,6 +58,25 @@
         &-title {
             font-size: 16px;
             text-align: center;
+        }
+    }
+    .breadcrumb {
+        & > li {
+            margin: 0 1px 0 1px;
+            line-height: 1;
+            & > a {
+
+            }
+        }
+        &-link {
+            font-size: 13px;
+        }
+        &-arrow, &-home {
+            width: 14px;
+            height: 14px;
+        }
+        &-arrow {
+            background-size: 60%;
         }
     }
 }
