--- a/resources/css/header/header.scss
+++ b/resources/css/header/header.scss
@@ -1,3 +1,6 @@
+.navbar {
+
+}
 .header {
     &-sign-out, &-location {
         background: url(/img/logo/sign-out.svg) no-repeat center rgb(245,245,245);
