--- a/resources/css/profile/settings.scss
+++ b/resources/css/profile/settings.scss
@@ -16,6 +16,7 @@
         border: none;
         outline: none;
         box-shadow: none !important;
+        background: transparent;
     }
     &-form {
         width: 70px;
