fixed settings profile

--- a/resources/css/profile/settings.scss
+++ b/resources/css/profile/settings.scss
@@ -17,6 +17,9 @@
         outline: none;
         box-shadow: none !important;
         background: transparent;
+        &:focus, :hover {
+            background: transparent !important;
+        }
     }
     &-form {
         width: 70px;
