--- a/resources/css/sections/profileSection.scss
+++ b/resources/css/sections/profileSection.scss
@@ -49,6 +49,7 @@
 .breadcrumb {
     background: transparent;
     padding: 0 0 5px 0;
+    margin: 0;
     color: white;
     & > li {
         display: flex;
