--- a/resources/css/header/header.scss
+++ b/resources/css/header/header.scss
@@ -1,9 +1,27 @@
 .navbar {
 
 }
+.fixed-top {
+    z-index: 500 !important;
+}
 .header {
+    &-notification {
+        cursor: pointer;
+        width: 44px;
+        height: 100%;
+        border-radius: 50px;
+        margin-right: 15px;
+        background: no-repeat center #fff;
+        background-size: 40%;
+        &-icon {
+            background-image: url('/img/logo/bell.svg');
+        }
+        &-icon-message {
+            background-image: url('/img/logo/notification.svg');
+        }
+    }
     &-sign-out, &-location {
-        background: url(/img/logo/sign-out.svg) no-repeat center rgb(245,245,245);
+        background: url('/img/logo/sign-out.svg') no-repeat center rgb(245,245,245);
         background-size: 40%;
         width: 40px;
         height: 40px;
@@ -23,6 +41,7 @@
         background: #fff;
         box-shadow: 1px 2px 10px rgba(0, 0, 0, .1);
         position: absolute;
+        top: 44px;
         right: 0;
         width: max-content;
         border-radius: 10px;
@@ -43,6 +62,7 @@
         }
     }
     &-main {
+        cursor: pointer;
         &:hover > .header-dropdown {
             display: block;
         }
@@ -53,7 +73,7 @@
         align-content: center;
         grid-template-columns: auto 30px;
         grid-gap: 5px;
-        height: 40px;
+        height: 100%;
         font-size: 14px;
         color: #FF8008;
         padding: 0 5px 0 10px;
