--- a/resources/css/footerMenu/footerMenu.scss
+++ b/resources/css/footerMenu/footerMenu.scss
@@ -1,5 +1,5 @@
 .title {
-    font-size: 8px;
+    font-size: 7px;
     margin-top: 2px;
     color: #00a082;
 }
@@ -15,6 +15,25 @@
         border-radius: 50px;
         &-main {
 
+        }
+    }
+    &-img {
+        width: 18px;
+        height: 18px;
+    }
+    &-icon {
+        width: 20%;
+        & > button {
+            padding: 3px 0 3px 0;
+            margin: 3px 0 3px 0;
+        }
+        &-center {
+            background: whitesmoke;
+            &-notify {
+                & > .title {
+                    color: #FF8008 !important;
+                }
+            }
         }
     }
 }
