--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -411,6 +411,7 @@
         }
         &-tab {
             font-size: 11px;
+            padding: 10px !important;
             &-sel {
 
             }
