--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -10,6 +10,19 @@
     overflow: auto;
 }
 
+.modal-photo, .modal-photo-view {
+    min-height: 200px;
+    background: rgba(0,0,0,.02) url('/img/logo/cloud-computing.png') no-repeat center;
+}
+
+.modal-photo-view > img {
+    display: block;
+}
+
+.modal-hidden {
+    display: none;
+}
+
 .modal-wrapper {
     position: relative;
     width: inherit;
@@ -180,6 +193,10 @@
     .modal-inputs {
         padding: 10px;
         gap: 10px;
+        flex-direction: column;
+    }
+    .modal-input {
+        width: 100%;
     }
     .modal-input > div {
         font-size: 12px;
@@ -204,6 +221,7 @@
     }
     .modal-100 {
         gap: 5px;
+        width: 100%;
     }
     .modal-input-close {
         top: 8px;
