--- a/resources/css/home/home.scss
+++ b/resources/css/home/home.scss
@@ -23,9 +23,9 @@
             & > div {
                 width: 50px;
                 height: 50px;
-                background: #00a082 no-repeat center;
+                background: #fff no-repeat center;
                 border: 4px solid #fff;
-                background-size: 60%;
+                background-size: contain;
                 border-radius: 30px;
             }
         }
