--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -126,7 +126,7 @@
     }
     &-card {
         &-main {
-            padding: 1.25rem;
+            padding: 15px;
         }
     }
     &-title {
@@ -198,15 +198,16 @@
             font-size: 12px;
         }
         &-title {
-            font-size: 16px;
+            font-size: 14px;
         }
         &-status {
-            font-size: 14px;
+            font-size: 12px;
             display: flex;
-            padding: 2px 10px 2px 10px;
+            padding: 2px 5px 2px 5px;
             border-radius: 3px;
             font-weight: bold;
             margin-top: 5px;
+            gap: 5px;
             &-free {
                 background: #00a082;
                 color: #fff;
