--- a/resources/css/organization/list.scss
+++ b/resources/css/organization/list.scss
@@ -56,7 +56,7 @@
         }
     }
     &-title {
-        font-size: 1.75rem;
+        font-size: 20px;
     }
     &-bg {
         background: rgb(245,245,245);
