--- a/resources/css/modal/comment.scss
+++ b/resources/css/modal/comment.scss
@@ -56,8 +56,8 @@
             font-size: 14px;
             &-arrow {
                 height: 16px;
-                width: 2px;
-                background: #00a082;
+                width: 1px;
+                background: gainsboro;
             }
         }
     }
@@ -96,11 +96,10 @@
         border: none;
         resize: none;
         outline: none !important;
-        padding: 10px;
+        padding: 15px;
         font-size: 15px;
-        border-radius: 0 10px 10px 0;
+        border-radius: 10px;
         overflow: hidden;
-        background: whitesmoke;
-        border-left: 5px solid #00a082;
+        background: rgb(245,245,245);
     }
 }
