--- a/resources/css/favorite/favorite.scss
+++ b/resources/css/favorite/favorite.scss
@@ -15,7 +15,8 @@
         }
     }
     &-main {
-        margin-left: 10px;
+        margin-left: 5px;
+        background-size: 70%;
     }
     &-category {
         position: absolute;
