--- a/resources/css/organization/organization.scss
+++ b/resources/css/organization/organization.scss
@@ -414,7 +414,7 @@
             height: auto;
         }
         &-tab {
-            font-size: 11px;
+            font-size: 11px !important;
             padding: 10px !important;
             &-sel {
 
