--- a/resources/css/header/auth/auth.scss
+++ b/resources/css/header/auth/auth.scss
@@ -81,6 +81,8 @@
         &-input {
             font-size: 12px;
             height: 36px;
+            border-radius: 36px;
+            background: #fff !important;
         }
         &-phone {
             padding-left: 30px !important;
