--- a/resources/css/header/auth/auth.scss
+++ b/resources/css/header/auth/auth.scss
@@ -83,6 +83,8 @@
             height: 36px;
             border-radius: 36px;
             background: #fff !important;
+            box-shadow: none !important;
+
         }
         &-phone {
             padding-left: 30px !important;
